--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -63,7 +63,10 @@ jobs:
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
-        run: composer test
+        run: |
+          php --version
+          php -m | grep -i sodium || echo "Sodium not available"
+          composer test
 
   coverage:
     runs-on: ubuntu-latest
@@ -96,7 +99,7 @@ jobs:
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
-        run: composer test-coverage -- --min=80 --coverage-clover=build/logs/coverage.xml
+        run: vendor/bin/pest --coverage --coverage-clover=build/logs/coverage.xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
