--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -63,19 +63,7 @@ jobs:
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
-        run: |
-          echo "=== PHP Version ==="
-          php --version
-          echo "=== Checking Sodium ==="
-          php -m | grep -i sodium || echo "Sodium not available"
-          echo "=== Test Directory ==="
-          ls -la tests/ || echo "No tests directory"
-          echo "=== Pest Configuration ==="
-          cat tests/Pest.php || echo "No Pest.php found"
-          echo "=== PHPUnit Configuration ==="
-          cat phpunit.xml || cat phpunit.xml.dist || echo "No PHPUnit configuration found"
-          echo "=== Running Tests ==="
-          vendor/bin/pest
+        run: vendor/bin/pest
 
   coverage:
     runs-on: ubuntu-latest
