--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,17 @@
             "role": "Developer"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/offline-agency/spid-laravel"
+        }
+    ],
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.0|^4.0",
         "illuminate/contracts": "^10.0|^11.0|^12.0",
-        "italia/spid-laravel": "dev-fix/optimize-error",
+        "italia/spid-laravel": "dev-feat-add-l12",
         "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
