--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -8,9 +8,13 @@ on:
 
 jobs:
   phpstan:
-    name: phpstan
+    name: PHPStan PHP ${{ matrix.php }}
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    strategy:
+      fail-fast: false
+      matrix:
+        php: [8.4, 8.3, 8.2]
 
     steps:
       - name: Checkout code
@@ -19,7 +23,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.3'
+          php-version: ${{ matrix.php }}
           coverage: none
 
       - name: Install composer dependencies
