--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         }
     ],
     "require": {
-        "php": "^8.2",
+        "php": "^8.2|^8.3|^8.4",
         "filament/filament": "^3.0|^4.0",
         "illuminate/contracts": "^10.0|^11.0|^12.0",
         "italia/spid-laravel": "dev-feat-add-l12",
@@ -35,9 +35,9 @@
     },
     "require-dev": {
         "laravel/pint": "^1.14",
-        "nunomaduro/collision": "^7.10|^8.0",
+        "nunomaduro/collision": "^7.10|^8.0|^9.0",
         "nunomaduro/larastan": "^2.9",
-        "orchestra/testbench": "^8.0|^9.0",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
         "pestphp/pest": "^2.36",
         "pestphp/pest-plugin-arch": "^2.7",
         "pestphp/pest-plugin-laravel": "^2.4",
