feat: update dependencies and ci

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -27,6 +27,9 @@ jobs:
           - laravel: 10.*
             testbench: 8.*
             carbon: ^2.63
+        exclude:
+          - php: 8.2
+            laravel: 12.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
