--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "require-dev": {
         "laravel/pint": "^1.14",
         "nunomaduro/collision": "^7.10|^8.0|^9.0",
-        "nunomaduro/larastan": "^2.9",
+        "larastan/larastan": "^2.9|^3.0",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
         "pestphp/pest": "^2.36|^3.0",
         "pestphp/pest-plugin-arch": "^2.7|^3.0",
