--- a/composer.json
+++ b/composer.json
@@ -29,21 +29,21 @@
     "require": {
         "php": "^8.2|^8.3|^8.4",
         "filament/filament": "^3.0|^4.0",
-        "illuminate/contracts": "^10.0|^11.0|^12.0",
+        "illuminate/contracts": "^11.0|^12.0",
         "italia/spid-laravel": "dev-feat-add-l12",
         "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
         "nunomaduro/collision": "^7.10|^8.0|^9.0",
-        "larastan/larastan": "^2.9|^3.0",
-        "orchestra/testbench": "^8.0|^9.0|^10.0",
-        "pestphp/pest": "^2.36|^3.0",
-        "pestphp/pest-plugin-arch": "^2.7|^3.0",
-        "pestphp/pest-plugin-laravel": "^2.4|^3.0",
+        "larastan/larastan": "^3.0",
+        "orchestra/testbench": "^9.0|^10.0",
+        "pestphp/pest": "^3.0",
+        "pestphp/pest-plugin-arch": "^3.0",
+        "pestphp/pest-plugin-laravel": "^3.0",
         "phpstan/extension-installer": "^1.3",
-        "phpstan/phpstan-deprecation-rules": "^1.1",
-        "phpstan/phpstan-phpunit": "^1.3"
+        "phpstan/phpstan-deprecation-rules": "^1.1|^2.0",
+        "phpstan/phpstan-phpunit": "^1.3|^2.0"
     },
     "autoload": {
         "psr-4": {
