--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -20,3 +20,6 @@ parameters:
         # SPIDAuth library method signature issues - external library
         - '#Method Italia\\SPIDAuth\\SPIDAuth::login\(\) invoked with 3 parameters, 0 required#'
         - '#Call to an undefined method Italia\\SPIDAuth\\SPIDAuth::getSPMetadata\(\)#'
+        
+        # Config files are allowed to use env() calls
+        - '#Called .*env.*outside of the config directory#'
